force-app/main/default/objects/Hotel__c/fields/Occupancy_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Percentage__c</fullName>
    <formula>IF(
    Total_Rooms__c = 0,
    0,
    Occupied_Rooms__c / Total_Rooms__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupancy Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>