force-app/main/default/objects/Hotel__c/fields/Occupied_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Rooms__c</fullName>
    <label>Occupied Rooms</label>
    <summaryFilterItems>
        <field>Room__c.Status__c</field>
        <operation>equals</operation>
        <value>Occupied</value>
    </summaryFilterItems>
    <summaryForeignKey>Room__c.Hotel__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>