force-app/main/default/objects/Hotel__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <summarizedField>Reservation__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Reservation__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Reservation__c.Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>