force-app/main/default/objects/Hotel__c/fields/Total_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Total_Rooms__c</fullName>
    <label>Total Rooms</label>
    <summaryForeignKey>Room__c.Hotel__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>